--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -15,6 +15,7 @@ ext {
             recyclerview            : "1.0.0",
             cardview                : "1.0.0",
             design                  : "28.0.0",
+            glide                   : "4.11.0",
             junit                   : "4.12",
             runner                  : "1.2.0",
             espressoCore            : "3.2.0",
@@ -58,6 +59,7 @@ ext {
             recyclerview  : "androidx.recyclerview:recyclerview:$versions.recyclerview",
             cardview      : "androidx.cardview:cardview:$versions.cardview",
             design        : "com.android.support:design:$versions.design",
+            glide         : "com.github.bumptech.glide:glide:$versions.glide"
     ]
 
     testImp = [
